sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:9: error: not found: value lgr
    for (n <- 1 to lgr-2) {
                   ^